# AutoDRIVE-Coopertitive-MARL

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
Training Configurations/: F1TenthRacing.yaml
env/AutoDRIVE_Data/: RuntimeInitializeOnLoads.json  boot.config  globalgamemanagers  level0
