[project]
name = "autodrive-coopertitive-marl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gym>=0.26.2",
    "gym-unity>=0.26.0",
    "mlagents==0.26.0",
    "mlagents-envs>=0.26.0",
    "numpy==1.23.5",
    "protobuf==3.20.3",
    "six>=1.17.0",
    "stable-baselines3>=1.2.0",
]
